**FEAT: Implementación integral de Favoritos, Reseñas y Disponibilidad (Sprint 3)**
***Gestión de Disponibilidad y Bloqueos:***

Creación de la entidad Booking para manejar tanto reservas de clientes como bloqueos manuales del administrador.

Implementación de AvailabilityBlockDTO para la transferencia de rangos de fechas.

Refactorización de PackageTravelRequestDTO.

***Sistema de Favoritos :***

Creación de la entidad Favorite.

Implementación de FavoriteService con lógica "toggle" (marcar/desmarcar con un clic).

Endpoint GET para el listado personalizado de paquetes guardados por el usuario.

***Reseñas y Puntuaciones:***

Implementación de la entidad Review vinculada a usuarios y paquetes.

Validación de negocio: Solo se permite calificar paquetes con reservas en estado 'FINISHED'.

Actualización dinámica de averageRating: El promedio de estrellas del paquete se recalcula automáticamente en la base de datos tras cada nueva reseña.

***Refactorización de Seguridad y DTOs:***

Creación de BookingResponseDTO para evitar la fuga de datos sensibles.

Uso de @JsonIgnoreProperties en entidades JPA para prevenir errores de recursión infinita y problemas con proxies de Hibernate.

Actualización de SecurityConfig.

***Datos Iniciales:***

Actualización de DataInitializer para precargar reseñas y estados de reserva que faciliten las pruebas.