@@ -1,18 +1,20 @@
 package com.tierranativa.aplicacion.tierra.nativa.controller;
 
+
 import com.tierranativa.aplicacion.tierra.nativa.dto.PackageTravelRequestDTO;
-import com.tierranativa.aplicacion.tierra.nativa.entity.*;
+import com.tierranativa.aplicacion.tierra.nativa.entity.PackageTravel;
+import com.tierranativa.aplicacion.tierra.nativa.entity.User;
 import com.tierranativa.aplicacion.tierra.nativa.service.implement.IPackageTravelService;
+import jakarta.validation.Valid;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.access.prepost.PreAuthorize;
+import org.springframework.security.core.annotation.AuthenticationPrincipal;
 import org.springframework.validation.annotation.Validated;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
-import java.util.Optional;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/paquetes")
@@ -27,46 +29,29 @@ public class PackageTravelController {
 
     @PostMapping
     @PreAuthorize("hasAuthority('ADMIN')")
-    public ResponseEntity<PackageTravelRequestDTO> registerPackage(@Validated @RequestBody PackageTravelRequestDTO packageDTO) {
-        PackageTravel createdPackage = iPackageTravelService.registerNewPackage(packageDTO);
+    public ResponseEntity<PackageTravelRequestDTO> registerPackage(@Validated @RequestBody PackageTravelRequestDTO packageDTO, @AuthenticationPrincipal User admin) throws Exception {
+        PackageTravel createdPackage = iPackageTravelService.registerNewPackage(packageDTO, admin);
         return ResponseEntity.status(HttpStatus.CREATED).body(PackageTravelRequestDTO.fromEntity(createdPackage));
     }
 
     @GetMapping
-    public ResponseEntity<List<PackageTravelRequestDTO>> getAllPackagesPublic() {
-        List<PackageTravelRequestDTO> packages = iPackageTravelService.findAll()
-                .stream()
+    public ResponseEntity<List<PackageTravelRequestDTO>> getAllPackages() {
+        return ResponseEntity.ok(iPackageTravelService.findAll().stream()
                 .map(PackageTravelRequestDTO::fromEntity)
-                .collect(Collectors.toList());
-        return ResponseEntity.ok(packages);
+                .toList());
     }
 
-    @GetMapping("/admin")
-    @PreAuthorize("hasAuthority('ADMIN')")
-    public ResponseEntity<List<PackageTravelRequestDTO>> getAllPackagesForAdmin() {
-        List<PackageTravelRequestDTO> packages = iPackageTravelService.findAll()
-                .stream()
-                .map(PackageTravelRequestDTO::fromEntity)
-                .collect(Collectors.toList());
-        return ResponseEntity.ok(packages);
-    }
 
     @PutMapping("/{id}")
     @PreAuthorize("hasAuthority('ADMIN')")
-    public ResponseEntity<?> update(@PathVariable Long id, @RequestBody PackageTravelRequestDTO updateDto) {
-        try {
-            PackageTravel updatedPackage = iPackageTravelService.update(id, updateDto);
-            return ResponseEntity.ok(PackageTravelRequestDTO.fromEntity(updatedPackage));
-        } catch (Exception e) {
-            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR)
-                    .body("Error al actualizar: " + e.getMessage());
-        }
+    public ResponseEntity<PackageTravelRequestDTO> update(@PathVariable Long id, @Valid @RequestBody PackageTravelRequestDTO updateDto, @AuthenticationPrincipal User admin) throws Exception {
+        PackageTravel updatedPackage = iPackageTravelService.update(id, updateDto, admin);
+        return ResponseEntity.ok(PackageTravelRequestDTO.fromEntity(updatedPackage));
     }
 
     @GetMapping("/{id}")
     public ResponseEntity<PackageTravelRequestDTO> findById(@PathVariable Long id) {
-        Optional<PackageTravel> packageTravel = iPackageTravelService.findById(id);
-        return packageTravel
+        return iPackageTravelService.findById(id)
                 .map(entity -> ResponseEntity.ok(PackageTravelRequestDTO.fromEntity(entity)))
                 .orElseGet(() -> ResponseEntity.notFound().build());
     }
